acomode el footer

--- a/css/style.css
+++ b/css/style.css
@@ -298,24 +298,21 @@ p {
   border-radius: 65px; }
 
 footer {
-  margin: 100px 0 0 0; }
-
-.logo_texto--color {
-  color: white; }
-
-.footer__columna-uno p a {
-  text-decoration: none;
-  color: white;
-  font-size: 1.3rem; }
-
-.footer__columna-dos p a {
-  text-decoration: none;
-  color: white;
-  font-size: 1.3rem; }
-
-.footer__columna-tres p {
-  color: white;
-  font-size: 1.3rem; }
+  margin: 100px 0 0 0;
+  font-family: "Montserrat", sans-serif; }
+  footer .logo_texto--color {
+    color: white; }
+  footer .footer__columna-uno p a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.3rem; }
+  footer .footer__columna-dos p a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.3rem; }
+  footer .footer__columna-tres p {
+    color: white;
+    font-size: 1.3rem; }
 
 .btn-primary {
   background-color: #073b4c;
@@ -351,7 +348,7 @@ main a:hover {
 .error {
   background-image: url(../imagenes/404error2.jpg);
   background-size: cover;
-  width: 98.9vw;
+  width: 100%;
   height: 100vh; }
   .error .error__texto {
     color: white; }
