--- a/scss/_error.scss
+++ b/scss/_error.scss
@@ -1,7 +1,7 @@
 .error {
   background-image: url(../imagenes/404error2.jpg);
   background-size: cover;
-  width: 98.9vw;
+  width: 100%;
   height: 100vh;
 
   .error__texto {
