--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,16 @@ p {
 
 .navbar {
   background-color: white; }
+  .navbar .navbar-nav .nav-link {
+    color: black; }
+  .navbar .navbar-nav .nav-link:hover {
+    color: #ef476f;
+    text-shadow: -1px 1px #bb3856; }
+  .navbar .navbar-nav .dropdown-item {
+    font-size: 1.3rem; }
+  .navbar .navbar-nav .dropdown-item:hover {
+    color: #ef476f;
+    text-shadow: -1px 1px #bb3856; }
 
 .sectionUno {
   background: #118ab2;
@@ -77,9 +87,6 @@ p {
       border: whitesmoke solid 0.5px;
       margin-bottom: 40px;
       box-shadow: 0 5px 5px 2px rgba(58, 58, 58, 0.555); }
-    .sectionUno .sectionUno__texto button a {
-      text-decoration: none;
-      color: white; }
 
 .sectionDos {
   background: #ef476f;
@@ -269,9 +276,13 @@ p {
         font-weight: bold;
         color: #ef476f; }
 
-.contacto .contacto__titulo {
-  text-align: center;
-  margin-bottom: 4%; }
+.contacto .contacto__caja {
+  padding: 3% 3% 0 3%;
+  display: flex;
+  justify-content: space-around; }
+  .contacto .contacto__caja .contacto__titulo {
+    text-align: center;
+    margin-bottom: 4%; }
 
 .btn--facebook {
   background-color: #3b5998;
@@ -315,6 +326,7 @@ footer {
     font-size: 1.3rem; }
 
 .btn-primary {
+  color: white;
   background-color: #073b4c;
   border: solid 2px #062f3d;
   transition: background-color 0.1s;
@@ -337,13 +349,6 @@ footer {
 .btn-secondary:hover {
   border: 2px solid #ec7f197a;
   background-color: #ec7f19; }
-
-.sectionUno a {
-  color: black;
-  transition: 0.5s; }
-
-main a:hover {
-  color: black; }
 
 .error {
   background-image: url(../imagenes/404error2.jpg);
