--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,6 +1,11 @@
 .contacto {
-  .contacto__titulo {
-    text-align: center;
-    margin-bottom: 4%;
+  .contacto__caja {
+    padding: 3% 3% 0 3%;
+    display: flex;
+    justify-content: space-around;
+    .contacto__titulo {
+      text-align: center;
+      margin-bottom: 4%;
+    }
   }
 }
