--- a/scss/_darumas.scss
+++ b/scss/_darumas.scss
@@ -16,6 +16,14 @@
           font-size: 1rem;
           height: 100px;
         }
+        .price_amulet {
+          font-size: 1.5rem;
+          font-weight: 400;
+          width: 80px;
+          float: right;
+          margin-bottom: 0;
+          text-align: center;
+        }
       }
     }
   }
