--- a/css/style.css
+++ b/css/style.css
@@ -171,13 +171,14 @@ p {
     .darumas .row .card .card-body .card-text {
       font-size: 1rem;
       height: 100px; }
-    .darumas .row .card .card-body .price_amulet {
-      font-size: 1.5rem;
-      font-weight: 400;
-      width: 80px;
-      float: right;
-      margin-bottom: 0;
-      text-align: center; }
+
+.price_amulet {
+  font-size: 1.5rem;
+  font-weight: 400;
+  width: 80px;
+  float: right;
+  margin-bottom: 0;
+  text-align: center; }
 
 .darumas__titulo {
   text-align: center;
