--- a/scss/_carrito.scss
+++ b/scss/_carrito.scss
@@ -7,45 +7,119 @@
   }
 }
 
+// .products-container {
+//   max-width: 650px;
+//   justify-content: space-around;
+//   margin: 0 auto;
+//   margin-top: 50px;
+
+//   .products-header {
+//     width: 100%;
+//     max-width: 650px;
+//     display: flex;
+//     justify-content: flex-start;
+//     border-bottom: 4px solid lightgrey;
+//     margin: 0 auto;
+
+//     .product-title {
+//       width: 45%;
+//     }
+//     .price {
+//       width: 15%;
+//       border-bottom: 1px solid lightgray;
+//       display: flex;
+//       align-items: center;
+//     }
+//     .quantity {
+//       width: 30%;
+//       border-bottom: 1px solid lightgray;
+//       display: flex;
+//       align-items: center;
+//     }
+//     .total {
+//       width: 10%;
+//       border-bottom: 1px solid lightgray;
+//       display: flex;
+//       align-items: center;
+//     }
+//   }
+//   .products {
+//     width: 100%;
+//     display: flex;
+//     align-items: center;
+//     flex-wrap: wrap;
+//     i {
+//       cursor: pointer;
+//     }
+//   }
+//   .basketTotalContainer {
+//     display: flex;
+//     justify-content: flex-end;
+//     width: 100%;
+//     padding: 10px 0;
+//   }
+//   .basketTotalTitle {
+//     width: 30%;
+//   }
+
+//   .basketTotal {
+//     width: 10%;
+//   }
+// }
 .products-container {
   max-width: 650px;
   justify-content: space-around;
   margin: 0 auto;
   margin-top: 50px;
-
-  .products-header {
-    width: 100%;
-    max-width: 650px;
-    display: flex;
-    justify-content: flex-start;
-    border-bottom: 4px solid lightgrey;
-    margin: 0 auto;
-
-    .product-title {
-      width: 45%;
-    }
-    .price {
-      width: 15%;
-      display: flex;
-      align-items: center;
-    }
-    .quantity {
-      width: 30%;
-      display: flex;
-      align-items: center;
-    }
-    .total {
-      width: 10%;
-      display: flex;
-      align-items: center;
-    }
-    .product {
-      width: 45%;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      padding: 10px 0;
-      border-bottom: 1px solid lightgrey;
-    }
+}
+.products-header {
+  width: 100%;
+  max-width: 650px;
+  display: flex;
+  justify-content: flex-start;
+  border-bottom: 4px solid lightgrey;
+  margin: 0 auto;
+}
+.products {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  i {
+    cursor: pointer;
   }
+}
+.product-title {
+  width: 45%;
+}
+.price {
+  width: 15%;
+  border-bottom: 1px solid lightgray;
+  display: flex;
+  align-items: center;
+}
+.quantity {
+  width: 30%;
+  border-bottom: 1px solid lightgray;
+  display: flex;
+  align-items: center;
+}
+.total {
+  width: 10%;
+  border-bottom: 1px solid lightgray;
+  display: flex;
+  align-items: center;
+}
+.basketTotalContainer {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  padding: 10px 0;
+}
+.basketTotalTitle {
+  width: 30%;
+}
+
+.basketTotal {
+  width: 10%;
 }
